removed index paramater form function as it was not being used. modal had too much click area to where it was causing an issue with closing the modal window rendering images. aligned modal content to shrink-wrap around the image instead of taking the full widht.

--- a/src/styles/transformations.css
+++ b/src/styles/transformations.css
@@ -156,12 +156,14 @@
 
     position:relative;
 
-    max-width:1100px;
-    width:100%;
+    display:inline-flex;
 
-    display:flex;
     justify-content:center;
     align-items:center;
+
+    max-width:90vw;
+    max-height:90vh;
+
 
   }
 
@@ -169,6 +171,8 @@
 
     width:100%;
     max-height:90vh;
+
+    display:block;
 
     object-fit:contain;
 
